--- a/Informe/reqEspecificos.tex
+++ b/Informe/reqEspecificos.tex
@@ -18,15 +18,6 @@ Tambien sera de utilidad para el analisis de los supuestos sobre los que se basa
 
 \subsection{Analisis de agentes involucrados}
 
-%Identificamos a todos estos agentes 
-%
-%departamente de marqueting
-%administradores del sistema
-%secretaria
-%clientes 
-%software
-%departamento contable
-
 Para comprender mejor la manera en que deberan relacionarse los distintos sujetos del mundo con el sistema a construir y sus interacciones, estucturamos el mundo con un Diagrama de contexto\footnote{Diagrama de contexto: Diagrama donde las cajas son agentes activos del sistema y las flechas son las interacciones basicas}
 
 Este diagrama tambien nos da otra mirada del alcance y expectativas del software a construir.
@@ -34,7 +25,7 @@ Este diagrama tambien nos da otra mirada del alcance y expectativas del software
 \begin{figure}[h!]
 	\centering
 		\includegraphics[scale=0.38]{img/dcCasino.png}
-	\caption{Diagrama de Objetivos \label{fig:dcCasino}}
+	\caption{Diagrama de Contexto \label{fig:dcCasino}}
 \end{figure}
 
 \begin{framed}
@@ -57,6 +48,16 @@ Identificamos y explicamos los conceptos funadamentales y las propiedades defini
 		\includegraphics[scale=0.38]{img/dclCasino.png}
 \end{center}
 
+Dado las limitaciones del Modelo Conceptual, agregaremos algunos invarientes para identificar mejor los estados deseables del sistema. Ver Anexo \ref{an2}
 
 
+\subsection{Casos de Uso}
+
+\begin{figure}[h!]
+	\centering
+		\includegraphics[scale=0.38]{img/casosDeUso.png}
+	\caption{Diagrama de Contexto \label{fig:dcCasino}}
+\end{figure}
+
+\input{cu.tex}
 
